app/03-web.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imgserve-web
  namespace: imgserve
  labels:
    app: imgserve-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: imgserve-web
  template:
    metadata:
      labels:
        app: imgserve-web
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - imgserve-web
              topologyKey: kubernetes.io/hostname
      containers:
      - name: imgserve-web
        image: mgraskertheband/imgserve-web:1.0.0
        imagePullPolicy: Always
        volumeMounts:
        - name: experiment-csvs
          mountPath: /usr/share/imgserve/experiments
        ports:
        - containerPort: 8080
      volumes:
        - name: experiment-csvs
          configMap:
            name: experiment-csvs
---
apiVersion: v1
kind: Service
metadata:
  name: imgserve-web
  namespace: imgserve
spec:
  selector:
    app: imgserve-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
