app/10-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: imgserve-fourtheye-redirect
  namespace: imgserve
  annotations:
    kubernetes.io.ingress.class: nginx
    nginx.ingress.kubernetes.io/permanent-redirect: "https://comp-syn.ialcloud.xyz"
spec:
  rules:
    - host: compsyn.fourtheye.xyz
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: imgserve-internal-web
  namespace: imgserve
  annotations:
    kubernetes.io.ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Comp-Syn'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Authorization $http_authorization;
spec:
  tls:
  - hosts:
    - comp-syn.ialcloud.xyz
    secretName: comp-syn-ialcloud-xyz-tls
  rules:
    - host: comp-syn.ialcloud.xyz
      http:
        paths:
        - path: /
          backend:
            serviceName: imgserve-web
            servicePort: 8080
